testsuite/tests/typecheck/should_fail/T19187.stderr

T19187.hs:8:10: error:
    • Non type-variable argument in the constraint: Eq Int
    • In the instance declaration for ‘Eq T’
    Suggested fix: Perhaps you intended to use FlexibleContexts
